apps/canary/version-2/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: v2-app-gate
  annotations:
    argocd.argoproj.io/sync-wave: '90'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  rollbackWindow:
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: v2
      app.kubernetes.io/name: app-gate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: v2
        app.kubernetes.io/name: app-gate
        container/version: green
    spec:
      containers:
      - name: v2-app-gate
        image: ybelval/rollouts-demo:green
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
        startupProbe: # sleep between 15 and 30 seconds
          exec:
            command:
              - bash
              - -c
              - |- 
                sleep $(( (RANDOM % 15) + 15 ))
          timeoutSeconds: 30
  strategy:
    canary:
      maxSurge: 25%
      maxUnavailable: 0
      steps:
      - setWeight: 90
      - pause: {duration: 10}
      - pause: {}
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: v2-app
  annotations:
    argocd.argoproj.io/sync-wave: '100'
spec:
  replicas: 10
  revisionHistoryLimit: 1
  rollbackWindow:
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: v2
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: v2
        app.kubernetes.io/name: app
        container/version: green
    spec:
      containers:
        - name: v2-app
          image: ybelval/rollouts-demo:green
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
          startupProbe: # sleep between 15 and 30 seconds
            exec:
              command:
                - bash
                - -c
                - |-
                  sleep $(( (RANDOM % 15) + 15 ))
            timeoutSeconds: 30
  strategy:
    canary:
      canaryService: v2-app-canary
      stableService: v2-app-stable
      scaleDownDelaySeconds: 3600 # requires canaryService and stableService
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        nginx:
          stableIngress: v2-app
      maxSurge: 25%
      maxUnavailable: 0
      steps:
        - setWeight: 10
        - setWeight: 90
